initial project with users and auth module

--- a/.env.example
+++ b/.env.example
@@ -19,10 +19,4 @@ USE_LOCAL_CACHE=true
 # REDIS_PASSWORD=
 CACHE_TTL=600
 
-FORGET_EXPIRATION_HOURS=2
-
-AWS_REGION=ap-southeast-1
-AWS_COGNITO_IDENTITY_POOL_ID=
-AWS_COGNITO_USER_POOL_ID=
-AWS_COGNITO_CLIENT_ID=
-AWS_COGNITO_CLIENT_SECRET=
+JWTKEY=foobar
