--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@nestjs/swagger": "^4.7.11",
     "@nestjs/terminus": "^7.0.1",
     "@types/lodash": "^4.14.168",
+    "aws-sdk": "^2.905.0",
     "bcrypt": "^5.0.0",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.12.2",
@@ -78,6 +79,7 @@
     "@types/express": "^4.17.11",
     "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.20",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.22",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
