add aws credentials to .env.example

--- a/.env.example
+++ b/.env.example
@@ -10,13 +10,8 @@ DB_PASS=root
 DB_DIALECT=postgres
 DB_NAME=db_name
 
-## Cache
-ENABLE_CACHE=false
-USE_LOCAL_CACHE=true
-# REDIS_HOST=localhost
-# REDIS_PORT=6379
-# REDIS_DB=0
-# REDIS_PASSWORD=
-CACHE_TTL=600
-
 JWTKEY=foobar
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=
